--- a/Agenda.html
+++ b/Agenda.html
@@ -190,8 +190,8 @@
 					</tr>
 					<tr>
 						<td>8:00 AM</td>
-						<td>Welcome Remarks and Introduction to the Workshop (Objective, Scope, Steering Committee)
-
+						<td><a href="PDF/8-00.pdf" target="_blank">Welcome Remarks and Introduction to the Workshop (Objective, Scope, Steering Committee)</a>
+							
 						</td>
 
 					</tr>
@@ -203,7 +203,7 @@
 
 					<tr style="height:5px">
 						<td>8:15 AM</td>
-						<td>Keynote Speakers – Case for a Sensing Collaboration (NETL and UPitt)
+						<td><a href="PDF/8-15.pdf" target="_blank">Keynote Speakers – Case for a Sensing Collaboration (NETL and UPitt)</a>
 
 							<br>• 15-min presentation (Pitt) – (Dr. Mike Holland, Vice Chancellor for Science Policy and Research Strategies, U. Pitt)
 							<br>• 15-min presentation (NETL) – (Dr. Bryan Morreale, Associate Laboratory Director for Research & Innovation Center, NETL)
@@ -221,7 +221,7 @@
 
 					<tr style="height:10px;">
 						<td>8:50 AM</td>
-						<td>Topic One – Keynote – EPRI Perspective on Advanced Sensing Needs (Keynote)
+						<td><a href="PDF/8-50.pdf" target="_blank">Topic One – Keynote – EPRI Perspective on Advanced Sensing Needs (Keynote)</a>
 							<br>• 20-min Presentation (Ron Schoff, EPRI)
 							<br>• 10-min Q&A
 
@@ -231,7 +231,7 @@
 
 					<tr>
 						<td>9:20 AM</td>
-						<td>Workshop Logistics – Day One, Morning </td>
+						<td><a href="PDF/9-20.pdf" target="_blank">Workshop Logistics – Day One, Morning</td></a>
 					</tr>
 
 
@@ -249,7 +249,7 @@
 
 					<tr>
 						<td>9:45 AM</td>
-						<td>Topic Two – Sensor Device Technologies (Optical, Passive Wireless, IC, etc.)
+						<td><a href="PDF/9-45.pdf" target="_blank">Topic Two – Sensor Device Technologies (Optical, Passive Wireless, IC, etc.)</a>
 							<br>• 15-min Presentation (NETL) (Ruishu Wright, NETL)
 							<br>• 15-min Presentation (Pitt) (Paul Ohodnicki, University of Pittsburgh)
 							<br>• 10-min Q&A
@@ -267,7 +267,7 @@
 
 					<tr>
 						<td>10:20 AM</td>
-						<td>Topic Three – Invited – Sensor Data Communication, Integration, and Analytics
+						<td><a href="PDF/10-20.pdf" target="_blank">Topic Three – Invited – Sensor Data Communication, Integration, and Analytics</a>
 							<br>• 20-min Presentation (Christopher Ziolkowski, GTI Energy)
 							<br>• 10-min Q&A
 
@@ -284,7 +284,7 @@
 
 					<tr>
 						<td>11:00 AM</td>
-						<td>Panel on Sensing Opportunities and Needs (Wright Moderator)
+						<td><a href="PDF/11-00.pdf" target="_blank">Panel on Sensing Opportunities and Needs (Wright Moderator)</a>
 							<br>Industry, University and National Lab Perspective
 							<br>• 5-min Panelist 1 (Susan Maley, EPRI)
 							<br>• 5 min Panelist 2 (C. Ravi, Aquatech)
@@ -329,7 +329,7 @@
 
 					<tr>
 						<td>1:25 PM</td>
-						<td>Topic Four – Keynote - Physics Based Models and Digital Twins in Industry
+						<td><a href="PDF/1-25.pdf" target="_blank">Topic Four – Keynote - Physics Based Models and Digital Twins in Industry</a>
 							<br>• 20-min Presentation (Sameer Kher, Ansys)
 							<br>• 10-min Q&A
 
@@ -347,7 +347,7 @@
 
 					<tr>
 						<td>2:00 PM</td>
-						<td>Topic Five – Invited – “Geo-Analytics and Machine Learning for Infrastructure”
+						<td><a href="PDF/2-00.pdf" target="_blank">Topic Five – Invited – “Geo-Analytics and Machine Learning for Infrastructure”</a>
 							<br>• 20-min Presentation (Kelly Rose, NETL)
 							<br>• 10-min Q&A
 
@@ -364,7 +364,7 @@
 
 					<tr>
 						<td>2:35 PM</td>
-						<td>Topic Six – Invited – Digital Twin Models and Interfacing with Real-Time Sensing 
+						<td><a href="PDF/2-35.pdf" target="_blank">Topic Six – Invited – Digital Twin Models and Interfacing with Real-Time Sensing</a>
 							<br>• 20-min Presentation – (Lea Boche, EPRI)
 							<br>• 10-min Q&A
 						</td>
@@ -379,7 +379,7 @@
 
 					<tr>
 						<td>3:30 PM</td>
-						<td>Second Panel – How Can We Partner to Create Opportunity and Have Impacts? (Ohodnicki Moderator)
+						<td><a href="PDF/3-30.pdf" target="_blank">Second Panel – How Can We Partner to Create Opportunity and Have Impacts? (Ohodnicki Moderator)</a>
 							<br>• 5-min Panelist 1 (Saba Almalkie, Ansys)
 							<br>• 5 min Panelist 2 (Joshua Gould, Duquesne Light) 
 							<br>• 5 min Panelist 3 (Robert Lieberman, Lumoptix)
@@ -393,7 +393,7 @@
 
 					<tr>
 						<td>4:25 PM</td>
-						<td>Summary of Action Items and Preparation for Report Out
+						<td><a href="PDF/4-25.pdf" target="_blank">Summary of Action Items and Preparation for Report Out</a>
 
 
 
@@ -404,7 +404,7 @@
 
 					<tr>
 						<td>4:30 PM</td>
-						<td>Looking to the Future and Next Steps (Ohodnicki, Wright, Ferguson)
+						<td><a href="PDF/4-30.pdf" target="_blank">Looking to the Future and Next Steps (Ohodnicki, Wright, Ferguson)</a>
 							<br>• Workshop closeout report discussion 
 							<br>• Where we go from here and how to be involved
 							<br>• Etc. 
@@ -416,7 +416,7 @@
 
 					<tr>
 						<td>5:00 PM</td>
-						<td>Final Remarks and Poster Session Summary</td>
+						<td><a href="PDF/5-00.pdf" target="_blank">Final Remarks and Poster Session Summary</td></a>
 
 					</tr>
 
