--- a/Agenda.html
+++ b/Agenda.html
@@ -422,7 +422,24 @@
 
 					<tr>
 						<td>5:05 - 6:30 PM</td>
-						<td>Poster Session with a Social Hour and Light Refreshments</td>
+						<td>Poster Session with a Social Hour and Light Refreshments
+							<br>•<a href="PDF/Xu.pdf" target="_blank">Andrew Xu: Designing methods for more identity-obscuring and equitable sensing in shared spaces</a>
+							<br>•<a href="PDF/Kim&Culp.pdf" target="_blank">Daejin Kim, Jeffrey Culp: Gas Sensitive Materials Enabled Optical Fiber - and SAW - Sensors for Hydrogen and Methane Monitoring</a>
+							<br>•<a href="PDF/Tomaraei.pdf" target="_blank">Golnaz Tomaraei: Controlling The Morphology, Chemistry, And Properties Of Nanocarbons In The Nanoproduct Lab</a>
+							<br>•<a href="PDF/Devkota & Pingree.pdf" target="_blank">Jagannath Devkota, Richard Pingree: Passive Wireless Surface Acoustic Wave Sensors and Wireless Telemetry</a>
+							<br>•<a href="PDF/Wuenschell.pdf" target="_blank">Jeffrey Wuenschell: Nanocomposite Films for Harsh Environment Sensing Applications on Optical Fiber</a>
+							<br>•<a href="PDF/Karki.pdf" target="_blank">Karki: Fiber optic deployment robotic tool (FODRT) for pipeline applications</a>
+							<br>•<a href="PDF/Karki_2.pdf" target="_blank">Karki: Single crystal fiber growth via LHPG method for harsh environment sensing applications</a>
+							<br>•<a href="PDF/SAMI.pdf" target="_blank">Kelly Rose, Chung Yan Shih: NETL’s Science-based AI/ML Institute</a>
+							<br>•<a href="PDF/Buric.pdf" target="_blank">Michael Buric: Distributed molten salt-loop development acceleration with single-crystal harsh-environment optical fiber-sensors</a>
+							<br>•<a href="PDF/Lalam.pdf" target="_blank">Nageswara Lalam: Distributed Fiber Sensor Interrogators for Multi-Parameter Monitoring</a>
+							<br>•<a href="PDF/Wright&Diemler&Shumski.pdf" target="_blank">Nathan Diemler, Alexander Shumski, Ruishu Wright: Corrosion and pH Monitoring of Pipelines and Subsurface Wellbores Using Optical Fiber Sensors</a>
+							<br>•<a href="PDF/Zhang.pdf" target="_blank">Pengdi Zhang: Pipeline Defects Inspection Based Upon Distributed Acoustic Fiber Optic Sensing Data for Machine Learning Technology</a>
+							<br>•<a href="PDF/Crawford.pdf" target="_blank">Scott Crawford: Portable Photoluminescent Sensors for Critical Metals</a>
+							<br>•<a href="PDF/Su.pdf" target="_blank">Yang-Duan Su: Electrical Asset Temperature Monitoring Using Optical Fiber Based Sensors</a>
+							<br>•<a href="PDF/Duan.pdf" target="_blank">Yuhua Duan: Theoretical Study of Temperature Dependence and Optical properties of Gas Sensor Materials</a>
+							<br>•<a href="PDF/Zeng.pdf" target="_blank">Z. Zeng: Heterogeneous Growth of UiO-66-NH2 on Oxidized Single-Walled Carbon Nanotubes to Form “Beads-on-a-String” Composites</a>
+						</td>
 
 					</tr>
 
