--- a/Agenda.html
+++ b/Agenda.html
@@ -423,22 +423,22 @@
 					<tr>
 						<td>5:05 - 6:30 PM</td>
 						<td>Poster Session with a Social Hour and Light Refreshments
-							<br>•<a href="PDF/Xu.pdf" target="_blank">Andrew Xu: Designing methods for more identity-obscuring and equitable sensing in shared spaces</a>
-							<br>•<a href="PDF/Kim&Culp.pdf" target="_blank">Daejin Kim, Jeffrey Culp: Gas Sensitive Materials Enabled Optical Fiber - and SAW - Sensors for Hydrogen and Methane Monitoring</a>
-							<br>•<a href="PDF/Tomaraei.pdf" target="_blank">Golnaz Tomaraei: Controlling The Morphology, Chemistry, And Properties Of Nanocarbons In The Nanoproduct Lab</a>
-							<br>•<a href="PDF/Devkota & Pingree.pdf" target="_blank">Jagannath Devkota, Richard Pingree: Passive Wireless Surface Acoustic Wave Sensors and Wireless Telemetry</a>
-							<br>•<a href="PDF/Wuenschell.pdf" target="_blank">Jeffrey Wuenschell: Nanocomposite Films for Harsh Environment Sensing Applications on Optical Fiber</a>
-							<br>•<a href="PDF/Karki.pdf" target="_blank">Karki: Fiber optic deployment robotic tool (FODRT) for pipeline applications</a>
-							<br>•<a href="PDF/Karki_2.pdf" target="_blank">Karki: Single crystal fiber growth via LHPG method for harsh environment sensing applications</a>
-							<br>•<a href="PDF/SAMI.pdf" target="_blank">Kelly Rose, Chung Yan Shih: NETL’s Science-based AI/ML Institute</a>
-							<br>•<a href="PDF/Buric.pdf" target="_blank">Michael Buric: Distributed molten salt-loop development acceleration with single-crystal harsh-environment optical fiber-sensors</a>
-							<br>•<a href="PDF/Lalam.pdf" target="_blank">Nageswara Lalam: Distributed Fiber Sensor Interrogators for Multi-Parameter Monitoring</a>
-							<br>•<a href="PDF/Wright&Diemler&Shumski.pdf" target="_blank">Nathan Diemler, Alexander Shumski, Ruishu Wright: Corrosion and pH Monitoring of Pipelines and Subsurface Wellbores Using Optical Fiber Sensors</a>
-							<br>•<a href="PDF/Zhang.pdf" target="_blank">Pengdi Zhang: Pipeline Defects Inspection Based Upon Distributed Acoustic Fiber Optic Sensing Data for Machine Learning Technology</a>
-							<br>•<a href="PDF/Crawford.pdf" target="_blank">Scott Crawford: Portable Photoluminescent Sensors for Critical Metals</a>
-							<br>•<a href="PDF/Su.pdf" target="_blank">Yang-Duan Su: Electrical Asset Temperature Monitoring Using Optical Fiber Based Sensors</a>
-							<br>•<a href="PDF/Duan.pdf" target="_blank">Yuhua Duan: Theoretical Study of Temperature Dependence and Optical properties of Gas Sensor Materials</a>
-							<br>•<a href="PDF/Zeng.pdf" target="_blank">Z. Zeng: Heterogeneous Growth of UiO-66-NH2 on Oxidized Single-Walled Carbon Nanotubes to Form “Beads-on-a-String” Composites</a>
+							<br>•Andrew Xu: <a href="PDF/Xu.pdf" target="_blank">Designing methods for more identity-obscuring and equitable sensing in shared spaces</a>
+							<br>•Daejin Kim, Jeffrey Culp: <a href="PDF/Kim&Culp.pdf" target="_blank">Gas Sensitive Materials Enabled Optical Fiber - and SAW - Sensors for Hydrogen and Methane Monitoring</a>
+							<br>•Golnaz Tomaraei: <a href="PDF/Tomaraei.pdf" target="_blank">Controlling The Morphology, Chemistry, And Properties Of Nanocarbons In The Nanoproduct Lab</a>
+							<br>•Jagannath Devkota, Richard Pingree: <a href="PDF/Devkota & Pingree.pdf" target="_blank">Passive Wireless Surface Acoustic Wave Sensors and Wireless Telemetry</a>
+							<br>•Jeffrey Wuenschell: <a href="PDF/Wuenschell.pdf" target="_blank">Nanocomposite Films for Harsh Environment Sensing Applications on Optical Fiber</a>
+							<br>•Karki: <a href="PDF/Karki.pdf" target="_blank">Fiber optic deployment robotic tool (FODRT) for pipeline applications</a>
+							<br>•Karki: <a href="PDF/Karki_2.pdf" target="_blank">Single crystal fiber growth via LHPG method for harsh environment sensing applications</a>
+							<br>•Kelly Rose, Chung Yan Shih: <a href="PDF/SAMI.pdf" target="_blank">NETL’s Science-based AI/ML Institute</a>
+							<br>•Michael Buric: <a href="PDF/Buric.pdf" target="_blank">Distributed molten salt-loop development acceleration with single-crystal harsh-environment optical fiber-sensors</a>
+							<br>•Nageswara Lalam: <a href="PDF/Lalam.pdf" target="_blank">Distributed Fiber Sensor Interrogators for Multi-Parameter Monitoring</a>
+							<br>•Nathan Diemler, Alexander Shumski, Ruishu Wright: <a href="PDF/Wright&Diemler&Shumski.pdf" target="_blank">Corrosion and pH Monitoring of Pipelines and Subsurface Wellbores Using Optical Fiber Sensors</a>
+							<br>•Pengdi Zhang: <a href="PDF/Zhang.pdf" target="_blank">Pipeline Defects Inspection Based Upon Distributed Acoustic Fiber Optic Sensing Data for Machine Learning Technology</a>
+							<br>•Scott Crawford: <a href="PDF/Crawford.pdf" target="_blank">Portable Photoluminescent Sensors for Critical Metals</a>
+							<br>•Yang-Duan Su: <a href="PDF/Su.pdf" target="_blank">Electrical Asset Temperature Monitoring Using Optical Fiber Based Sensors</a>
+							<br>•Yuhua Duan: <a href="PDF/Duan.pdf" target="_blank">Theoretical Study of Temperature Dependence and Optical properties of Gas Sensor Materials</a>
+							<br>•Z. Zeng: <a href="PDF/Zeng.pdf" target="_blank">Heterogeneous Growth of UiO-66-NH2 on Oxidized Single-Walled Carbon Nanotubes to Form “Beads-on-a-String” Composites</a>
 						</td>
 
 					</tr>
