--- a/Agenda.html
+++ b/Agenda.html
@@ -423,7 +423,7 @@
 					<tr>
 						<td>5:05 - 6:30 PM</td>
 						<td>Poster Session with a Social Hour and Light Refreshments
-							<br>• Andrew Xu: <a href="PDF/Xu.pdf" target="_blank">Designing methods for more identity-obscuring and equitable sensing in shared spaces</a>
+							<br><br>• Andrew Xu: <a href="PDF/Xu.pdf" target="_blank">Designing methods for more identity-obscuring and equitable sensing in shared spaces</a>
 							<br>• Daejin Kim, Jeffrey Culp: <a href="PDF/Kim&Culp.pdf" target="_blank">Gas Sensitive Materials Enabled Optical Fiber - and SAW - Sensors for Hydrogen and Methane Monitoring</a>
 							<br>• Golnaz Tomaraei: <a href="PDF/Tomaraei.pdf" target="_blank">Controlling The Morphology, Chemistry, And Properties Of Nanocarbons In The Nanoproduct Lab</a>
 							<br>• Jagannath Devkota, Richard Pingree: <a href="PDF/Devkota & Pingree.pdf" target="_blank">Passive Wireless Surface Acoustic Wave Sensors and Wireless Telemetry</a>
