--- a/Agenda.html
+++ b/Agenda.html
@@ -56,6 +56,7 @@
 					<h2>Agenda</h2>
 
 					<p>UPitt Infrastructure Sensor Collaboration (UPISC) 2022 Workshop</p>
+					<p style="color: #e44c65">*See 8/25 Workshop Presentation Materials Under Day Two*</p>
 				</header>
 
 				<!-- Content -->
@@ -429,7 +430,7 @@
 							<br>• Jagannath Devkota, Richard Pingree: <a href="PDF/Devkota & Pingree.pdf" target="_blank">Passive Wireless Surface Acoustic Wave Sensors and Wireless Telemetry</a>
 							<br>• Jeffrey Wuenschell: <a href="PDF/Wuenschell.pdf" target="_blank">Nanocomposite Films for Harsh Environment Sensing Applications on Optical Fiber</a>
 							<br>• Karki: <a href="PDF/Karki.pdf" target="_blank">Fiber optic deployment robotic tool (FODRT) for pipeline applications</a>
-							<br>• Karki: <a href="PDF/Karki_2.pdf" target="_blank">Single crystal fiber growth via LHPG method for harsh environment sensing applications</a>
+							<br>• Edward Hoffman, Karki: <a href="PDF/Karki_2.pdf" target="_blank">Single crystal fiber growth via LHPG method for harsh environment sensing applications</a>
 							<br>• Kelly Rose, Chung Yan Shih: <a href="PDF/SAMI.pdf" target="_blank">NETL’s Science-based AI/ML Institute</a>
 							<br>• Michael Buric: <a href="PDF/Buric.pdf" target="_blank">Distributed molten salt-loop development acceleration with single-crystal harsh-environment optical fiber-sensors</a>
 							<br>• Nageswara Lalam: <a href="PDF/Lalam.pdf" target="_blank">Distributed Fiber Sensor Interrogators for Multi-Parameter Monitoring</a>
