--- a/Agenda.html
+++ b/Agenda.html
@@ -56,7 +56,7 @@
 					<h2>Agenda</h2>
 
 					<p>UPitt Infrastructure Sensor Collaboration (UPISC) 2022 Workshop</p>
-					<p style="color: #e44c65">*See 8/25 Workshop Presentation Materials Under Day Two*</p>
+					<p style="color: #e44c65">*See 8/25 Workshop Presentation Materials Linked To Activites Under Day Two*</p>
 				</header>
 
 				<!-- Content -->
