--- a/Agenda.html
+++ b/Agenda.html
@@ -385,7 +385,7 @@
 							<br>• 5 min Panelist 2 (Joshua Gould, Duquesne Light) 
 							<br>• 5 min Panelist 3 (Robert Lieberman, Lumoptix)
 							<br>• 5 min Panelist 4 (Robie Lewis, NETL)
-							<br>• 5 min Panelist 5 (Mat Podskarbi, Akselos)
+							<br>• 5 min Panelist 5 (Arvind Tiwari, GE)
 							<br>• 30-min Moderated Q&A
 							
 						</td>
